--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "emailjs-com": "^3.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.0",
     "react-router-dom": "^6.15.0",
     "react-scroll": "^1.8.9"
   },
